--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,7 +21,8 @@
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <title>React App</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"/>    
+    <title>iChat</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
